tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2025/aoc_day1_part1.flx:18:9
   |
18 |         0 - distance
   |         ^^^^^^^^^^^^
   |         ------------ this expression has type `Int and Option<Int>`

   |         ------------ operator operands are known at compile time

Note:
  expected type: numeric operands (Int or Float)
  found type: Int and Option<Int>

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion


error[E004]: Undefined Variable

I can't find a value named `solve_steps`.

  examples/aoc/2025/aoc_day1_part1.flx:28:5
   |
28 |     solve_steps(rest, (next_pos, next_hits))
   |     ^^^^^^^^^^^

Hint:
  Define it first: let solve_steps = ...;

Found 2 errors.
== stdout ==
<not executed>
